fix spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -753,19 +753,13 @@ footer.sticky-bottom {
     margin-top: 2rem;
     margin-bottom: 1rem;
     text-align: right;
-    
-    &:first-of-type {
-      margin-top: 1.5rem;
-    }
   }
 
   .project-list {
+    list-style: none;
+    padding: 0;
+    margin-top: 0;
     margin-bottom: 0;
-    margin-top: 2rem;
-    
-    &:first-of-type {
-      margin-top: 2rem;
-    }
   }
 
   .project-card-link {
